[FIX] contrast issue with tracker status icons on certain themes

--- a/themes/amelia/scss/amelia.scss
+++ b/themes/amelia/scss/amelia.scss
@@ -27,3 +27,9 @@
 	border-color: #581812;
   }
 }
+
+.tiki_trackers {
+	.icon-status-open, .icon-status-pending, .icon-status-closed {
+		filter: drop-shadow(0px 0px 1px black);
+	}
+}
