--- a/themes/solar/scss/solar.scss
+++ b/themes/solar/scss/solar.scss
@@ -22,3 +22,9 @@ body {
   color: #839496;
   background-color: #002b36;
 }
+
+.tiki_trackers {
+	.icon-status-open, .icon-status-pending, .icon-status-closed {
+		filter: drop-shadow(0px 0px 1px black);
+	}
+}
