--- a/themes/superhero/scss/superhero.scss
+++ b/themes/superhero/scss/superhero.scss
@@ -49,3 +49,9 @@ body {
         }
     }
 }
+
+.tiki_trackers {
+	.icon-status-open, .icon-status-pending, .icon-status-closed {
+		filter: drop-shadow(0px 0px 1px black);
+	}
+}
